<resources>
    <string name="app_name">Icbc Practice Test</string>
    <string name="txtTitle">Questions</string>
    <string name="txtQuestionNo">Question No</string>
    <string name="btnSubmit">SUBMIT</string>
    <string name="btnNext">NEXT</string>
    <string name="dbName">ICBC</string>
    <string name="dbVersion">1</string>
    <string name="txtViewAppTitle"> ICBC PRACTICE TEST </string>
    <string name="txtViewOptions">Select Resource For Practice Test</string>
    <string name="radBtnDatabase">Database</string>
    <string name="radBtnNetwork">Website</string>
    <string name="btnResChoice">START</string>
    <string name="txtViewWelcome"> WELCOME </string>
    <string name="txtViewTo"> TO </string>
    <string name="btnClose">CLOSE</string>
    <string name="txtViewResultText">Your Attempted Score Is</string>
    <string name="title_activity_detail2_acivity">Detail2Acivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_detailed">DetailedActivity</string>
    <string name="imgSplash">ICBC TEST</string>

    <string name="btnSignIn">Sign In</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="btnGuest">Guest</string>
    <string name="txtViewUsername">Username</string>
    <string name="txtViewPassword">Password</string>
    <string name="txtViewEmail">Email-Id</string>
    <string name="hintUser">Your Name Here...</string>
    <string name="hintPassword">Your Password Here...</string>
    <string name="hintEmail">Your Email-Id Here...</string>
    <string name="btnRegister">REGISTER</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



</resources>
